# shader_toy

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  frame_buffer.cpp  imgui.ini  imguidemo.cpp  shader_toy.cpp  shader_toy_gui.cpp
config/: camera_config.yaml  config.yaml  shadertoy.yaml
include/glad/: glad.h
include/myImplement/: camera.h  config.h  errorno.h  shader.h
model/: simple_cube.txt  simple_plne.txt  simple_sqad.txt
previous/: badcase.cpp  hello_camera.cpp  hello_triangle.cpp  hello_window.cpp  transform.cpp  yaml_array_test.cpp
shader/shader_frag/: hello_framebuffer_fs.glsl  shadertoy_fireworks_fs.glsl  shadertoy_home_fs.glsl  shadertoy_maincube_fs.glsl  shadertoy_overthemoon_fs.glsl  shadertoy_raymarch_fs.glsl  shadertoy_raymarchshapes_fs.glsl  shadertoy_smileface_fs.glsl  shadertoy_starfield_fs.glsl  shadertoy_twistedtorus_fs.glsl
shader/shader_vert/: hello_framebuffer_vs.glsl  shadertoy_common_vs.glsl
src/: CMakeLists.txt  shader.cpp
