AUX_SOURCE_DIRECTORY(. APP_LIST)

IF (DEBUG)
    ADD_DEFINITIONS(-DDEBUG)
    MESSAGE("DEBUG set to ON")
ENDIF()

FILE(GLOB LIB_LIST ${PROJECT_SOURCE_DIR}/lib/*.dll ${PROJECT_SOURCE_DIR}/lib/*.a)
IF (LIB_LIST)
    MESSAGE("------------------- LIB LIST -------------------")
    FOREACH (lib ${LIB_LIST})
        MESSAGE("lib found: ${lib}")
    ENDFOREACH ()
    MESSAGE("------------------- LIST END -------------------")
ENDIF()

FOREACH (app ${APP_LIST})
    GET_FILENAME_COMPONENT(output ${app} NAME_WE)
    ADD_EXECUTABLE(${output} ${app})
    TARGET_LINK_LIBRARIES(${output} mysrc)


    SET(to_be_linked "")
    IF (LIB_LIST)
        FOREACH (lib ${LIB_LIST})
            GET_FILENAME_COMPONENT(lib_name ${lib} NAME_WE)
            GET_FILENAME_COMPONENT(lib_post ${lib} LAST_EXT)
            IF (NOT lib_post)
                MESSAGE(FATAL_ERROR "lib format not recognized\n")
            ENDIF()
            IF (NOT(lib_post STREQUAL ".a" OR lib_post STREQUAL ".so" OR lib_post STREQUAL ".lib" OR lib_post STREQUAL ".dll"))
                MESSAGE(FATAL_ERROR "lib format not recognized: ${lib_post}\n")
            ENDIF()
            STRING(SUBSTRING ${lib_name} 3 -1 lib_name_without_prefix)
            SET(to_be_linked ${to_be_linked} ${lib_name_without_prefix})
            TARGET_LINK_LIBRARIES(${output} ${lib_name_without_prefix})
        ENDFOREACH()
        MESSAGE("${output} will be linked with: ${to_be_linked} + ${GL_LIB}")
        TARGET_LINK_LIBRARIES(${output} ${GL_LIB})
    ENDIF()
ENDFOREACH()